--- a/client/src/components/editor/Annotator.module.scss
+++ b/client/src/components/editor/Annotator.module.scss
@@ -80,7 +80,6 @@
 
     .ai_control {
         width: 100%;
-        height: 100%;
         position: relative;
         gap: 1em;
         text-align: right;
@@ -185,18 +184,15 @@
         font-size: 0.9em;
         svg {
             height: 0.9em;
-            fill: currentColor
-
-
+            fill: currentColor;
         }
         opacity: 0.8;
         &:hover {
-            background-color: #4a4a4a
+            background-color: #4a4a4a;
         }
 
         border-radius: 5em;
     }
-
 
     button.save_button {
         font-family: inherit;
@@ -225,7 +221,7 @@
         font-size: 80%;
         margin-left: 0.3em;
         margin-top: 0.2em;
-        border:0.1em solid  #191d1a;
+        border: 0.1em solid #191d1a;
         color: #191d1a;
         border-radius: 7px;
         padding: 0.5em 0.7em;
@@ -241,7 +237,6 @@
             cursor: default;
         }
     }
-
 
     button.restart_button {
         font-family: inherit;
